# OpenGL-study

./: .gitignore  CMakeLists.txt  common.cpp  common.h  default.cpp  default.h  main.cpp
1_hello-window/: base.h
2_hello-triangle/: base.cpp  ex1.cpp  ex2.h  ex3.h
3_shaders/: base.cpp  base_fs.glsl  base_vs.glsl  base_vs_ex2.glsl
4_textures/: base.cpp  base.h  base_fs_ex1.glsl  base_vs.glsl  ex2.cpp  ex2.h  ex3.cpp  ex3.h  ex4.cpp
5_transformations/: base.cpp  base_fs.glsl  ex1.cpp  ex1.h  ex2.cpp
6_coordinate-systems/: base.cpp  base.h
7_camera/: base.cpp  base.h  base_vs.glsl  ex1.cpp  ex1.h  ex2.cpp  ex2.h
getting-started/: hello_window.cpp  hello_window.h
hello-triangle/: base.cpp  base.h  ex1.cpp  ex1.h  ex2.cpp  ex3.cpp
hello-window/: base.cpp
shaders/: base.cpp  base.h  base_fs_ex3.glsl  base_vs.glsl  base_vs_ex1.glsl  base_vs_ex2.glsl  base_vs_ex3.glsl
textures/: base.cpp  base_fs_ex4.glsl  base_vs.glsl  ex2.cpp  ex3.cpp  ex4.cpp  ex4.h
transformations/: base.cpp  base.h  base_vs.glsl  ex1.cpp  ex2.cpp  ex2.h
utils/: camera.cpp  camera.h  common.cpp  common.h  default.cpp
